# handiva

./: Cargo.toml
src/: app.rs  main.rs
src/app/: clicker.rs  config.rs  hotkeys.rs  icon_packer.rs  key_monitor.rs  tabs.rs  utils.rs
src/app/tabs/: about.rs  clicker.rs  icon_packer.rs  key_monitor.rs  settings.rs
